fix(#29): 리뷰 피드백 반영 - 코드 간소화 및 가독성 개선
- ReserveBundleStockService: HashSet 생성 대신 Stream filter 사용으로 중간 컬렉션 생성 방지
- InventoryPersistenceAdapter: Collections.emptyMap() 대신 Map.of() 사용
- InventoryPersistenceAdapter: Function.identity() 대신 람다 표현식 사용으로 가독성 향상

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>